made reader view and tree view sidebars scrollable (without scrollbars) and fixed the memory leak!

--- a/deployable/assets/css/style.css
+++ b/deployable/assets/css/style.css
@@ -3,7 +3,6 @@ html{
 }
 body{
 	margin: 0px;
-	overflow: hidden;
 	height: 100%;
 }
 
@@ -43,8 +42,18 @@ body{
 }
 
 #sidebar{
-	
+	height: 100%;
+	max-height: 800px;
+	overflow: hidden;
 }
+
+#sidebar-wrapper{
+	height:99%;
+	max-height: 800px;
+	overflow: auto;
+}
+
+#sidebar-wrapper::-webkit-scrollbar { width: 0 !important }
 
 #topbar{
 	padding-left: 20%;
@@ -67,11 +76,35 @@ body{
 
 #result{
 	padding-top: 10px;
+	height: 100%;
+	max-height: 800px;
+	overflow: hidden;
 }
+
+#result-wrapper{
+	height:99%;
+	max-height: 800px;
+	overflow: auto;
+}
+
+#result-wrapper::-webkit-scrollbar {width: 0 !important}
 
 #prompt{
 	padding-top: 10px;
+	height: 100%;
+	max-height: 800px;
+	overflow: hidden;
 }
+
+#prompt-wrapper{
+	height:99%;
+	max-height: 800px;
+	overflow: auto;
+}
+
+#prompt-wrapper::-webkit-scrollbar {width: 0 !important}
+
+
 
 #nav-info{
 	
